Adding measure for allowing user-defined seasons.

--- a/workflows/measure-info.json
+++ b/workflows/measure-info.json
@@ -298,28 +298,35 @@
         ]
       },
       {
-        "name": "2. Heating Setpoint",
+        "name": "2. Heating and Cooling Seasons",
+        "dependencies": "",
+        "measures": [
+          "ResidentialHVACSeasons"
+        ]
+      },      
+      {
+        "name": "3. Heating Setpoint",
         "dependencies": "HVAC Equipment, Location",
         "measures": [
           "ResidentialHVACHeatingSetpoints"
         ]
       },
       {
-        "name": "3. Cooling Setpoint",
+        "name": "4. Cooling Setpoint",
         "dependencies": "HVAC Equipment, Location",
         "measures": [
           "ResidentialHVACCoolingSetpoints"
         ]
       },
       {
-        "name": "4. Ceiling Fan",
+        "name": "5. Ceiling Fan",
         "dependencies": "Cooling Setpoint, Beds/Baths",
         "measures": [
           "ResidentialHVACCeilingFan"
         ]
       },
       {
-        "name": "5. Dehumidifier",
+        "name": "6. Dehumidifier",
         "dependencies": "HVAC Equipment",
         "measures": [
           "ResidentialHVACDehumidifier"
