Add test for sample osw running successfully.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ coverage
 /measures/OSWtoHPXMLExport/tests/*.xml
 /measures/301EnergyRatingIndexRuleset/tests/*.osm
 /measures/301EnergyRatingIndexRuleset/tests/HERS*.xml
+/workflows/reports
+/workflows/run
+/workflows/out.osw
